<resources>
    <string name="app_name">云展视</string>

    <string name="str_warning">警告</string>
    <string name="str_tips">提示</string>
    <string name="str_activate_code_time_out">激活码已经过期，您需要重新输入激活码激活</string>
    <string name="str_activate_code_time_limit_format">激活码还有%s就到期了。</string>
    <string name="str_no_more_data">没有更多数据</string>
    <string name="str_exit_app">退出应用程序？</string>
    <string name="str_switch_activate_code">切换激活码？</string>
    <string name="str_switch">切换</string>

    <string name="str_found_new_version">发现新版本</string>
    <string name="str_update_now">立即更新</string>
    <string name="str_update_later">以后再说</string>
    <string name="str_version_name_format">版本：%s</string>
    <string name="str_downloading_new_apk">正在下载新版本</string>
    <string name="str_progress_text_format">已完成%d%%</string>
    <string name="str_download_failed">下载失败</string>
    <string name="str_download_failed_with_error">下载出现错误，是否重试？</string>
    <string name="str_retry">重试</string>
    <string name="str_installing_apk">正在安装升级包，请稍后&#8230;</string>
    <string name="str_install_background">后台更新</string>
    <string name="str_restart_app">重启应用程序</string>
    <string name="str_update_finished">更新完毕</string>

    <string name="str_index_format">%1$d/%2$d</string>

    <string name="str_need_request_permission">部分权限授权没有通过，没有这些权限，程序将可能无法正常运行，是否重新授权？</string>
    <string name="str_confirm">确定</string>
    <string name="str_cancel">取消</string>
    <string name="str_exit">退出</string>
    <string name="str_no_data">没有相关数据</string>
    <string name="str_network_error">网络连接失败</string>
    <string name="str_touch_to_refresh">点击刷新</string>

    <string name="str_time_mills_format">%d毫秒</string>
    <string name="str_time_second_format">%d秒</string>
    <string name="str_time_minutes_format">%d分钟</string>
    <string name="str_time_hour_format">%d小时</string>
    <string name="str_time_day_format">%d天</string>

    <!-- 激活 -->
    <string name="str_please_input_activation_code">请输入激活码</string>
    <string name="str_activate">激活</string>
    <string name="str_invalid_activate_code">无效的激活码</string>

    <!-- 主界面 -->
    <string name="str_voice_vertical">语\n音</string>
    <string name="str_home_vertical">首\n页</string>
    <string name="str_setting_vertical">设\n置</string>
    <string name="str_notice_vertical">公\n告</string>
    <string name="str_weather_vertical">天\n气</string>
    <string name="str_logout_vertical">注\n消</string>
    <string name="str_switch_vertical">切\n换</string>
    <string name="str_weather_format">%1$s %2$s~%3$s</string>

    <!-- 企业主界面 -->
    <string name="str_back_with_arrow_left">&lt; 返回</string>
    <string name="str_corporate_product">企业产品</string>
    <string name="str_corporate_video">企业视频</string>
    <string name="str_corporate_honor">企业荣誉</string>
    <string name="str_corporate_culture">企业文化</string>
    <string name="str_corporate_image">企业形象</string>
    <string name="str_corporate_news">企业新闻</string>
    <string name="str_corporate_environment">企业环境</string>
    <string name="str_corporate_intro">企业简介</string>
    <string name="str_corporate_about_us">关于我们</string>
    <string name="str_recommended_product">推荐产品</string>
    <string name="str_recommended_video">推荐视频</string>
    <string name="str_view_all_product">查看所有产品</string>
    <string name="str_view_all_video">查看所有视频</string>

    <!-- 产品界面 -->
    <string name="str_search">搜索</string>
    <string name="str_to_list_view">转列表模式</string>
    <string name="str_to_page_view">转浏览模式</string>
    <string name="str_reference_price_label">参考价：</string>
    <string name="str_price_format_with_currency">¥ %s</string>
    <string name="str_specification_parameter_label">规格参数：</string>
    <string name="str_image_text_detail_label">图文详情：</string>
    <string name="str_label_format">%s：</string>
    <string name="str_input_keyword">输入您要搜索的关键词</string>
    <string name="str_search_result_label">搜索结果：</string>
    <string name="str_loading">加载中</string>

    <!-- 视频 -->
    <string name="str_loading_video">视频加载中</string>
    <string name="str_video_play_failed">无法播放该视频</string>

    <!-- 语音机器人开场白 -->
    <string name="str_voice_android_start_format">%s为您服务</string>
    <string name="str_voice_unknown_what_to_do">对不起，我无法理解您的意图。</string>
    <string name="str_voice_search_not_found">没有找到相关内容。</string>
    <string name="str_searching">搜索中......</string>
    <string name="str_search_result">搜索结果</string>
    <string name="str_search_result_about">关于“%1$s”的搜索结果</string>
    <string name="str_voice_android_name_default">语音助手</string>
</resources>
