<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/layer_list_bg_main_menu_sub">
    <CheckBox
        android:id="@+id/cb_main_menu_setting_notice"
        style="@style/MainMenuSubItemTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_notice_vertical"
        android:button="@null"
        android:drawableTop="@drawable/selector_ic_main_menu_hide"/>
    <View
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/contentPadding_level3"
        android:layout_marginBottom="@dimen/contentPadding_level3"
        android:background="@color/colorMainMenuBorder"/>
    <CheckBox
        android:id="@+id/cb_main_menu_setting_weather"
        style="@style/MainMenuSubItemTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_weather_vertical"
        android:button="@null"
        android:drawableTop="@drawable/selector_ic_main_menu_hide"/>
    <View
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/contentPadding_level3"
        android:layout_marginBottom="@dimen/contentPadding_level3"
        android:background="@color/colorMainMenuBorder"/>
    <Button
        android:id="@+id/btn_main_menu_setting_logout"
        style="@style/MainMenuSubItemTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:drawableTop="@drawable/selector_ic_main_menu_logout"
        android:text="@string/str_logout_vertical"/>
    <View
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/contentPadding_level3"
        android:layout_marginBottom="@dimen/contentPadding_level3"
        android:background="@color/colorMainMenuBorder"/>
    <Button
        android:id="@+id/btn_main_menu_setting_switch"
        style="@style/MainMenuSubItemTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:drawableTop="@drawable/selector_ic_main_menu_switch"
        android:text="@string/str_switch_vertical"/>
</LinearLayout>