<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:imagecontrol="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGray">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!-- 背景，防止拉伸变形 -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_corporate_header"
            android:contentDescription="@null"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/contentPadding_level2"
            android:paddingRight="@dimen/contentPadding_level2"
            android:paddingTop="@dimen/contentPadding_level1"
            android:paddingBottom="@dimen/contentPadding_level3"
            android:gravity="center_horizontal|bottom">
            <com.xunda.cloudvision.ui.widget.round.RoundImageView
                android:id="@+id/iv_corporate_logo"
                android:layout_width="@dimen/corporate_header_logo_size"
                android:layout_height="@dimen/corporate_header_logo_size"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher"
                imagecontrol:border_color="@color/colorLightGray"
                imagecontrol:border_thickness="1dp"
                imagecontrol:corner_rate="2" />
            <TextView
                android:id="@+id/tv_corporate_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/contentPadding_level4"
                android:textSize="@dimen/textSize_level6"
                android:textColor="@color/text_color_white"
                android:text="天朝实业有限公司"/>
        </LinearLayout>
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite">
        <Button
            style="@style/CorporateTopBarTheme"
            android:id="@+id/btn_corporate_culture"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:drawableTop="@drawable/ic_corporate_culture"
            android:text="@string/str_corporate_culture"/>
        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/colorLightGray"/>
        <Button
            style="@style/CorporateTopBarTheme"
            android:id="@+id/btn_corporate_honor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:drawableTop="@drawable/ic_corporate_honor"
            android:text="@string/str_corporate_honor"/>
        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/colorLightGray"/>
        <Button
            style="@style/CorporateTopBarTheme"
            android:id="@+id/btn_corporate_environment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:drawableTop="@drawable/ic_corporate_environment"
            android:text="@string/str_corporate_environment"/>
        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/colorLightGray"/>
        <Button
            style="@style/CorporateTopBarTheme"
            android:id="@+id/btn_corporate_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:drawableTop="@drawable/ic_corporate_image"
            android:text="@string/str_corporate_image"/>
        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/colorLightGray"/>
        <Button
            style="@style/CorporateTopBarTheme"
            android:id="@+id/btn_corporate_intro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:drawableTop="@drawable/ic_corporate_intro"
            android:text="@string/str_corporate_intro"/>
    </LinearLayout>

</LinearLayout>